--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 DATABASE_URL = "postgresql://neondb_owner:gBaDxIRE4F7N@ep-still-king-a4yfmcf6.us-east-1.aws.neon.tech/neondb?sslmode=require"
+
+CLOUDFRONT_URL = "https://d3d3rb7cyglf9v.cloudfront.net"
+
+ACCESS_KEY_ID = 
+SECRET_ACCESS_KEY = 
